@@ -41,6 +41,9 @@ player-won-rand-8=[color=36, 204, 210]__1__[/color] might have too much free tim
 player-won-rand-9=[color=36, 204, 210]__1__[/color] took this round!
 player-won-rand-10=[color=36, 204, 210]__1__[/color] is the fastest and furiousest!
 
+countdown=[color=210, 117, 36][font=wdd-countdown]__1__[/font][/color]
+countdown-start=Go!
+
 [entity-name]
 wdd-car-static=Demolition Car
 wdd-car=Demolition Car
