@@ -1,0 +1,9 @@
+data:extend(
+{
+    {
+        type = "font",
+        name = "wdd-countdown",
+        from = "default-bold",
+        size = 250
+    },
+})
