@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 28. 05. 2022
+  Features:
+    - Added big countdown letters.
   Changes:
     - All arenas are now covered by radar.
 ---------------------------------------------------------------------------------------------------
